tests/js_error/regexp/overflowing_quantifier_bound.js
/a{987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321,9876543219876543219876543219876543219876543219876543219876543219876543219876543219876543219876543219876543210}/;